src/objects/loan__Trigger_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>loan__Disable_Accounting_Period_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable accounting period trigger</inlineHelpText>
        <label>Disable Accounting Period Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Accounting_Segment_Setup_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable accounting segment setup trigger</inlineHelpText>
        <label>Disable Accounting Segment Setup Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Accounting_Transaction_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable accounting transaction trigger</inlineHelpText>
        <label>Disable Accounting Transaction Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Automated_Payment_Config_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Automated Payment Config Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Automated_Payment_Setup_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Automated Payment Setup Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Branch_Creation_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable branch creation trigger</inlineHelpText>
        <label>Disable Branch Creation Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Charge_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable charge trigger</inlineHelpText>
        <label>Disable Charge Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_ClientCrtUpd_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable client create and update trigger</inlineHelpText>
        <label>Disable Client Create And Update Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_ClientIdentification_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable client identification trigger</inlineHelpText>
        <label>Disable ClientIdentification Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Day_Process_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable the day process trigger</inlineHelpText>
        <label>Disable DayProcess Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Group_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable group trigger</inlineHelpText>
        <label>Disable Group Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_InvFundTxn_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable Investor fund transaction trigger</inlineHelpText>
        <label>Disable Investor Fund Txn Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_LoanPrdCycle_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable loan product cycle trigger</inlineHelpText>
        <label>Disable Loan Product Cycle Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_LoanWrtOffTxn_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable loan write off transaction trigger</inlineHelpText>
        <label>Disable Loan Wrt Off Txn Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Loan_Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable loan account trigger</inlineHelpText>
        <label>Disable Loan Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Loan_Prd_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable loan product trigger</inlineHelpText>
        <label>Disable Loan Product Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_MFAccount_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable MF Account trigger</inlineHelpText>
        <label>Disable MFAccount Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_PostDisbAccBalUpd_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable post disbursal account balance update trigger</inlineHelpText>
        <label>Disable Post Disb Acc Bal Update Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_PostRpmtAccBalUpd_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable post repayment account balance trigger</inlineHelpText>
        <label>Disable Post Rpmt Acc Balance Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_PostRpmtAdjTxn_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable post repayment adjustment transaction trigger</inlineHelpText>
        <label>Disable Post Repmt Adj Txn Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Post_Disb_Adj_Txn_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable post disbursal adjustment transaction trigger</inlineHelpText>
        <label>Disable Post Disb Adj Txn Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Question_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable question trigger</inlineHelpText>
        <label>Disable Question Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Recovery_Order_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable recovery order trigger</inlineHelpText>
        <label>Disable Recovery Order Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Rpmt_Schedule_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable repayment schedule trigger</inlineHelpText>
        <label>Disable Repmt Schedule Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Saving_Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable Savings account trigger</inlineHelpText>
        <label>Disable Saving Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Saving_Pmt_Txn_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable Savings payment transaction trigger</inlineHelpText>
        <label>Disable Saving Pmt Txn Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Saving_Prd_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable Savings product trigger</inlineHelpText>
        <label>Disable Saving Product Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_Tell_Cash_Txn_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable Teller cash transaction trigger</inlineHelpText>
        <label>Disable Teller Cash Txn Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_User_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable user trigger</inlineHelpText>
        <label>Disable User Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_ValidAccTxnEntryTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to disable valid account for transaction entry trigger</inlineHelpText>
        <label>Disable Valid Acc For Txn Entry Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Disable_broker_commission_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable broker_populate_commission_plan trigger</description>
        <inlineHelpText>Check this to disable broker populate commission plan trigger</inlineHelpText>
        <label>Disable_broker_populate_commission_plan</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Parameters</label>
</CustomObject>